Fix button spacing

--- a/src/app/components/codetudes/codetudes.component.css
+++ b/src/app/components/codetudes/codetudes.component.css
@@ -8,15 +8,24 @@
   grid-row: 1 / 2;
   grid-column: 1 / -1;
   display: grid;
-  grid-template-columns: 1fr auto auto auto;
+  grid-template-columns: 1fr auto;
   grid-column-gap: 1rem;
   align-items: center;
   font-weight: bold;
 }
 
+.header-buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .header-button {
   font-size: 1.25rem;
-  justify-self: end;
+  margin-right: 1rem;
+}
+
+.header-button:last-child {
+  margin-right: 0;
 }
 
 .title {
